Задание 20, правка от 17.03.2020

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </svg>
         </a> 
         <ul class="site-navigation">                    
-          <li><a href="#">Студия</a></li>
+          <li><a class="current-page" href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
           <li><a href="catalog.html"> Магазин</a></li>
           <li><a href="#">Контакты</a></li>
@@ -38,7 +38,7 @@
         <h2 class="slider-title visually-hidden">Слайдер из трёх слайдов</h2> 
         <ul class="slider">
           <li class="slide-one">
-              <h3 class="how">Долго, дорого,<br>скрупулёзно.</h3>
+              <h3 class="how">Долго, дорого,<br>скрупулезно.</h3>
               <p class="perfect-design">Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
               <a class="slider-button button" href="#">Узнать больше</a>
           </li>
@@ -75,14 +75,14 @@
             <li class="catalog-item">
               <div class="catalog-content"><img src="img/advantage-picture-green.jpg" width="300" height="146" alt="Приложения"></div>
               <h3>Приложения</h3>  
-              <p class="catalog-slogan">Покорите топ-10 приложений в AppleStore и Google Play</p>
+              <p class="catalog-slogan">Покорите топ-10 приложений в AppStore и Google Play</p>
               <a class="button-green button" href="#">Заказать</a>
             </li>
 
             <li class="catalog-item" >
               <div class="catalog-content"><img src="img/advantage-picture-yellow.jpg" width="300" height="146" alt="Презентации"></div>
               <h3>Презентации</h3>  
-              <p class="catalog-slogan">Вы даже не представляете, насколько вы изумительны!</p>
+              <p class="catalog-slogan">Вы даже не подозреваете, насколько вы изумительны!</p>
               <a class="button-yellow button" href="#">Заказать</a>
             </li>
           </ul> 
@@ -97,7 +97,7 @@
             <ul class="what-list">
               <li class="what-item">Веб-сайтов любой сложности</li>
               <li class="what-item">Мобильных приложений для ISO и Android</li>
-              <li class="what-item">Слайд-шоу и видео для корпоративных презентаций</li>
+              <li class="what-item">Слайдшоу и видео для корпоративных презентаций</li>
             </ul>
         </div>
         <div class="right-side-fourth-part">
@@ -134,7 +134,7 @@
         <img src="img/map-marker4.jpg" width="1160" height="416" alt="карта">     
         <div class="map-contacts">
           <h2 class="studio-name">nёrds design studio</h2>
-          <address class="studio-address">191186, Санкт-Петебург, ул. Б. Конюшенная д.19/8</address>
+          <address class="studio-address">191186, Санкт-Петебург, ул. Б. Конюшенная, д. 19/8</address>
           <p><a href="tel:+78122757575" class="studio-tel">тел.+7 (812) 275-75-75</a></p>
           <a class="button-map button" href="#">напишите нам</a>
         </div>       
@@ -185,16 +185,13 @@
             <input class="modal-letter-input" type="text" placeholder="email@example.com" id="your-email" name="your-email-send" required>
           </div>
         </div>
-        <label class="modal-letter-label" for="letter">Текст письма:</label>
+        <label class="modal-letter-label part3" for="letter">Текст письма:</label>
         <textarea class="letter-text" id="letter" name="name-letter" rows="5" cols="33">В свободной форме</textarea>
         <button type="submit" class="letter-button button">Отправить</button>
       </form>  
       </div>
     </section>
-    <section>
-      <h2 class="visually-hidden">Секция для эксперимента в ховерами и фокусами</h2>
-      <div class="test"><a href="#">лабораторная крыса</a></div>
-    </section>
+   
   </body>
 </html>
 
