Задание 20, правка от 13:17 17.03.2020

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </svg>
         </a> 
         <ul class="site-navigation">                    
-          <li><a class="current-page" href="#">Студия</a></li>
+          <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
           <li><a href="catalog.html"> Магазин</a></li>
           <li><a href="#">Контакты</a></li>
@@ -68,7 +68,7 @@
             <li class="catalog-item">
               <div class="catalog-content"><img src="img/advantage-picture-red.jpg" width="300" height="146" alt="Веб-сайты"></div>
               <h3>Веб-сайты</h3>  
-              <p class="catalog-slogan">Мир никогда не будет прежним после того, как увидит Ваш сайт!</p>
+              <p class="catalog-slogan">Мир никогда не будет прежним после того как увидит Ваш сайт!</p>
               <a class="button-red button" href="#">Заказать</a>
             </li>
     
@@ -134,7 +134,7 @@
         <img src="img/map-marker4.jpg" width="1160" height="416" alt="карта">     
         <div class="map-contacts">
           <h2 class="studio-name">nёrds design studio</h2>
-          <address class="studio-address">191186, Санкт-Петебург, ул. Б. Конюшенная, д. 19/8</address>
+          <address class="studio-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
           <p><a href="tel:+78122757575" class="studio-tel">тел.+7 (812) 275-75-75</a></p>
           <a class="button-map button" href="#">напишите нам</a>
         </div>       
