Задание 20, правка от 18.03.2020

--- a/catalog.html
+++ b/catalog.html
@@ -210,7 +210,7 @@
         <img src="img/map-marker4.jpg" width="1160" height="416" alt="карта">
         <div class="map-contacts">
           <h2 class="studio-name">nёrds design studio</h2>
-          <address class="studio-address">191186, Санкт-Петебург, ул. Б. Конюшенная, д. 19/8</address>
+          <address class="studio-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
           <p><a href="tel:+78122757575" class="studio-tel">тел.+7 (812) 275-75-75</a></p>
           <a class="button-map button" href="#">напишите нам</a>
         </div>
